#370 removed constructor -of- and added builder